# BianYiExperiment

./: CMakeLists.txt
experiment1/: experiment1.cpp  test1.txt
experiment2/: b.cpp  b1.cpp  experiment2.cpp  nfa2  nfa3  test1
experiment3/: experiment3.cpp
experiment5/: experiment5.cpp  function.cpp  function.h  test
experiment6/: experiment6.cpp
experiment7/: experiment7.cpp  test.lrtbl
